# fastapi-react-boilerplate

./: .editorconfig  .env.example  .gitignore  README.md  compose.debug.yaml  compose.prod.yaml  compose.yaml  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.yml  docker-install.sh  fastapi-react-boilerplate.code-workspace  setup.sh
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile-multi  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2024_07_10_0546-134f9a3892c1_initial_migration.py  442667a1aa7a_initial_migration.py  7248dcdfed1e_migration_name.py  74b42e83a9f7_sqlmodel_bump.py  897def5065bc_migration_name.py  96036e79307a_debug.py  d6851761e3c0_initial_state.py
backend/src/: db.py  main.py  models.py  settings.py
backend/src/api/: deps.py
backend/src/api/api_v1/: api.py
backend/src/api/api_v1/endpoints/: login.py  login_.py  user.py
backend/src/api/v1/: __init__.py
backend/src/api/v1/endpoints/: login.py  user.py  user_me.py
backend/src/core/: config.py  custom_logging.py  logging.py  security.py
backend/src/crud/: __init__.py  base.py  crud_user.py
backend/src/db/: init_db.py  session.py
backend/src/models/: __init__.py  base.py  file.py  image.py  user.py  user_favorite.py
backend/src/schemas/: base.py  common.py  token.py  user.py
frontend/: .dockerignore  .eslintrc.cjs  .eslintrc.yaml  .eslintrc.yml  .gitignore  Dockerfile  README.md  bun.lockb  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx  App.tsx  main.tsx  vite-env.d.ts
nginx/: nginx.conf  nginx.prod.conf
(+9 files in other folders)
