[project]
name = "fastapi-react-boilerplate"
requires-python = ">=3.12"
version = "0.0.0"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN001",  # for default=True like vars
    "ANN101",  # for self
    "ANN102",  # for cls
    "ANN201",  # for handlers return
    "ANN204",  # for __init__ return None
    "ANN401",  # for Any
    "EM101", "TRY003",  # for strings in exceptions
    "D", "TD", "FIX",  # for TODOs
    "ERA",     # for commented code
    "RET502",  # for return without None
    "RET503",  # for function without return
    "RUF001",  # for cyrillic
]
