[project]
name = "fastapi-react-boilerplate"
requires-python = ">=3.12"
version = "0.0.0"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN001",  # for default=True like vars
    "ANN101",  # for self
    "ANN102",  # for cls
    "ANN201",  # for handlers return
    "ANN204",  # for __init__ return None
    "ANN401",  # for Any
    "EM101", "TRY003",  # for strings in exceptions
    "D", "TD", "FIX",  # for TODOs
    "ERA",     # for commented code
    "RET502",  # for return without None
    "RET503",  # for function without return
    "RUF001",  # for cyrillic
]

[tool.pylint]
max-line-length = 120
disable = [
    "C0103",  # trigger to short names
    "C0114",  # idk
    "C0115",  # idk
    "C0116",  # idk
    "C0301",  # line too long handled by ruff
    "W0106",  # list comprehension false positive
    "W0511",  # TODO

    "E1101",  # XxxDsn.build
]
